src/objects/CRM_WF_Modificacion__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Buzon_Squad__c</fullName>
        <label>Buzón Squad</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Campana__c</fullName>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Modificaciones</relationshipLabel>
        <relationshipName>Modificaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Clasificacion__c</fullName>
        <label>Clasificación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afiliaciones</fullName>
                </value>
                <value>
                    <fullName>Beneficios</fullName>
                </value>
                <value>
                    <fullName>Bines</fullName>
                </value>
                <value>
                    <fullName>Canales</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Legales</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>POB</fullName>
                </value>
                <value>
                    <fullName>Sembrados</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Vigencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_FIC__c</fullName>
        <formula>CRM_WF_Campana__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_de_Modificaci_n__c</fullName>
        <label>Estado de Modificación</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Proceso</fullName>
                    <default>true</default>
                    <label>En Proceso</label>
                </value>
                <value>
                    <fullName>Vo.Bo. Generador</fullName>
                </value>
                <value>
                    <fullName>Vo.Bo. Línea Bancomer/SUN</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Modificación</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Folio de Modificación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modificaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>